--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -7,18 +7,25 @@
   </head>
   <section ng-controller="IdeasController" ng-init="findOne()">
     <h1 class = "frontscreen" ng-bind="idea.title"></h1>
-
     <div class="idea-content" ng-bind="idea.description.long"></div>
-    <div>
-      <button type="success" ui-sref = "ideas.list()" class = "btn btn-primary">
+
+    <span class="btn-group">
+
+      <button ui-sref = "ideas.list()">
         <span class="glyphicon glyphicon-arrow-left"></span>
       </button>
-      <button type="success" ui-sref = "global()" class = "btn btn-primary">
+
+
+      <button ui-sref = "global()" >
         <span class="glyphicon glyphicon-home"></span>
       </button>
-      <button type="danger" class="btn btn-danger" ng-click="remove()">
+
+
+      <button  ng-click="remove()">
         <span class="glyphicon glyphicon-trash"></span>
       </button>
 
-    </div>
+    </span>
+
   </section>
+</html>
