--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -1,55 +1,15 @@
-@media (min-width: 992px) {
-  .nav-users {
-    position: fixed;
-  }
-}
-.social-account-container {
-  display: inline-block;
-  position: relative;
-}
-.btn-remove-account {
-  top: 10px;
-  right: 10px;
-  position: absolute;
-}
-.btn-file {
-  position: relative;
-  overflow: hidden;
-}
-.btn-file input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 100%;
-  min-height: 100%;
-  font-size: 100px;
-  text-align: right;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  background: white;
-  cursor: inherit;
-  display: block;
-}
-.user-profile-picture {
-  min-height: 150px;
-  max-height: 150px;
-}
-
-
-
-
-#fields {
+.userinputfield {
   color: #63666a;
   font-weight: 500;
   font-size: small;
 }
-#subtext {
+.subtextpassword {
   color: #63666a;
   font-weight: 300;
   font-size: small;
   margin-top: 10px;
 }
-#container1 {
+.authpage .container1 {
   text-align: center;
 
   left:0;
@@ -58,22 +18,18 @@
   padding-bottom:10vh;
   background-color:#ddd;
 }
-#container3 {
+.authpage .container3 {
   text-align:center;
   position:absolute;
   left:0;
   right:0;
 }
-#container2 {
+.authpage .container2 {
   text-align: center;
   margin-bottom:50px;
 }
-#container4 {
-  background-color:#ddd;
 
-}
-
-.btn {
+.authpage .btn {
     padding: 14px 24px;
     border: 0 none;
     font-weight: 400;
@@ -81,53 +37,52 @@
     width:50%;
 }
 
-.btn:focus, .btn:active:focus, .btn.active:focus {
+.authpage .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none;
 }
 
-.btn-primary {
+.authpage .btn-primary {
     background: #509e2f;
     color: #ffffff;
     display:inline;
 }
-.round {
+.authpage .round {
   border-radius: 8px;
 }
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-    background: #509e2f;
+.authpage .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #509000;
 }
 
-.btn-primary:active, .btn-primary.active {
+.authpage .btn-primary:active, .btn-primary.active {
     background: #007299;
     box-shadow: none;
 }
-.btn.outline {
+.authpage .btn.outline {
     background: none;
     padding: 12px 22px;
 }
-.btn-primary.outline {
+.authpage .btn-primary.outline {
     margin-top:15px;
     border: 2px solid #509e2f;
     color: #509e2f
 }
 
-ul {
-  text-align: center;
+.authpage {
+  font-family: 'Palatino Linotype';
 }
-a {
+
+.authpage a{
   color: #63666a;
   font-weight: 500;
   font-family: 'Palatino Linotype';
 }
-
-
-h3 {
+.authpage h3 {
 
   font-family: 'Palatino Linotype';
   font-size: 32px;
   font-weight: 600;
 }
-p {
+.authpage p {
   font-family: 'Palatino Linotype';
   font-size: 16px;
   font-weight: 400;
