--- a/modules/ideas/client/views/create-idea.client.view.html
+++ b/modules/ideas/client/views/create-idea.client.view.html
@@ -1,7 +1,7 @@
 
-<section ng-controller="IdeasController">
+<section class="ideaspage" ng-controller="IdeasController">
   <div class="col-xs-12">
-    <h2 class = "frontscreen">Add Idea</h2>
+    <h2>Add Idea</h2>
     <form name="ideaForm" class="form-vertical">
       <fieldset>
         <div class="form-group" show-errors>
@@ -12,15 +12,16 @@
         </div>
 
 
-
-        <button ui-sref="global()" class="btn btn-primary">
+  <div class="row">
+        <div class="col-xs-6">
+        <button ui-sref="global()" class="btn btn-primary-1 pull-left">
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
-
-
         <button type="submit" ng-click="saveIdeaInfo()" class="btn btn-primary">
           Submit
         </button>
+      </div>
+    </div>
 
 
 
