--- a/modules/ideas/client/views/list-ideas.client.view.html
+++ b/modules/ideas/client/views/list-ideas.client.view.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../css/ideas.css">
 </head>
 <body>
-  <section ng-controller="IdeasController" ng-init="find()">
+  <section class="ideaspage" ng-controller="IdeasController" ng-init="find()">
     <div class="list-group" ui-sref="ideas.view({ideaId: idea._id})" ng-repeat="idea in ideas|orderBy:random">
       <a class="list-group-item">
         <h4 class="list-group-item-heading">{{idea.title}}</h4>
