project votes table view

--- a/modules/core/client/views/admin/index.client.view.html
+++ b/modules/core/client/views/admin/index.client.view.html
@@ -1,3 +1,4 @@
 <section ng-controller="HomeController">
   <a ui-sref="eventCategories.index()">Manage Event Categories</a>
+  <br><a ui-sref="projects.votes()">Vote Results</a>
 </section>
