added click question to toggle solution, working on adding a solution functionality and showing if answered. Researching FAQ pages to determine how to implement.

--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -12,7 +12,7 @@
       <a class="btn btn-primary" ui-sref="projects.edit({projectId: project._id})">
         <i class="glyphicon glyphicon-edit"></i>
       </a>
-      <a class="btn btn-primary" ng-click="remove();">
+      <a class="btn btn-primary" ng-click="remove()">
         <i class="glyphicon glyphicon-trash"></i>
       </a>
     </div>
