--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -13,11 +13,11 @@
       <button type="btn" class="btn btn-xs pull-right"  ui-sref="faqs.post()"><i class="glyphicon glyphicon-plus"><div class="glyphicon glyphicon-question-sign"></div></i> Ask a question</button>
     </div>
   </div>
-  <div class="list-group" ui-sref="faqs.post({faqId: faq._id})" ng-repeat="faq in faqs">
+  <div class="list-group" ui-sref="" ng-repeat="faq in faqs">
     <a  class="list-group-item">
-      <h4 class="list-group-item-heading glyphicon glyphicon-question-sign"> {{faq.question}} </h4>
-      <h6 class="list-group-item-heading  glyphicon glyphicon-exclamation-sign"> {{faq.solution}} </h6>
-      <p class="list-group-item-text glyphicon glyphicon-warning-sign"> {{faq.solved}} </p>
+      <h4 class="list-group-item-heading" ng-click="showme=!showme"> {{faq.question}} <div class="glyphicon glyphicon-question-sign"></div></h4>
+      <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <div class="glyphicon glyphicon-exclamation-sign"></div></h6>
+      <h8 class="list-group-item-text" ng-show="showme" ng-click=""> {{faq.solved}} <div class="glyphicon glyphicon-warning-sign"></div></h8>
     </a>
   </div>
 </section>
