--- a/modules/ideas/client/views/list-ideas.client.view.html
+++ b/modules/ideas/client/views/list-ideas.client.view.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   <section class="ideaspage" ng-controller="IdeasController" ng-init="find()">
+
     <div class="list-group" ng-repeat="idea in ideas|orderBy:'-title'">
+
       <div class="row">
         <div class="col-xs-11">
           <a ui-sref="ideas.view({ideaId: idea._id})" class="list-group-item">
             <h4 class="list-group-item-heading">{{idea.title}}
+
             <h6 class="list.group-item-heading">{{idea.category}}</h6>
             <p class="list-group-item-text">{{idea.description.short}}</p>
             </a>
@@ -36,6 +39,8 @@
       </a>
 -->
     </div>
+
     </div>
+  </div>
   </section>
 </body>
