--- a/modules/events/client/views/create.client.view.html
+++ b/modules/events/client/views/create.client.view.html
@@ -21,6 +21,19 @@
       </label>
     </div>
     <div class="form-group">
+      <label>Start Date/Time</label> <br />
+      <datetimepicker ng-model="start"
+                      date-format="dd-MMM-yyyy">
+      </datetimepicker>
+    </div>
+
+    <div class="form-group">
+      <label>End Date/Time</label> <br />
+      <datetimepicker ng-model="end"
+                      date-format="dd-MMM-yyyy">
+      </datetimepicker>
+    </div>
+    <div class="form-group">
       <input type="submit" value="Create" class="btn btn-default">
     </div>
   </form>
