--- a/modules/events/client/views/edit.client.view.html
+++ b/modules/events/client/views/edit.client.view.html
@@ -21,6 +21,19 @@
       </label>
     </div>
     <div class="form-group">
+      <label>Start Date/Time</label> <br />
+      <datetimepicker ng-model="event.start"
+                      date-format="dd-MMM-yyyy">
+      </datetimepicker>
+    </div>
+
+    <div class="form-group">
+      <label>End Date/Time</label> <br />
+      <datetimepicker ng-model="event.end"
+                      date-format="dd-MMM-yyyy">
+      </datetimepicker>
+    </div>
+    <div class="form-group">
       <input type="submit" value="Update" class="btn btn-default">
       <a class="btn btn-danger" ng-click="remove(event)">Delete</a>
     </div>
