--- a/modules/projects/client/views/list-projects-votes.client.view.html
+++ b/modules/projects/client/views/list-projects-votes.client.view.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../../../public/lib/bootstrap/dist/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="bower_components/bootstrap/dist/bootstrap.min.css"></script>
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/bootstrap.min.js"></script>
   <link rel="stylesheet" href="../css/projects.css">
 </head>
 <body>
-  
-<section ng-controller="ProjectsController" ng-init="find();">
+
+<section ng-controller="ProjectsController" ng-init="find()">
   <div class="col-xs-12">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#all">All Projects</a></li>
@@ -23,14 +23,20 @@
         <div id="all" class="tab-pane fade in active">
           <div class="tableWrapper">
             <table class="table table-hover">
+              <thead>
                 <tr>
                   <th>Project Title</th>
-                  <th>Votes</th>
+                  <th>Project Category</th>
+                  <th ng-click="sortReverse = !sortReverse">Votes <span class="glyphicon glyphicon-sort"></span></th>
                 </tr>
-                <tr ng-repeat="project in projects|orderBy:'-votes'" ui-sref="projects.view({projectId: project._id})">
+              </thead>
+              <tbody>
+                <tr ng-repeat="project in projects|orderBy:'-votes':sortReverse" ui-sref="projects.view({projectId: project._id})">
                   <td>{{project.title}}</td>
+                  <td>{{project.category}}</td>
                   <td>{{project.votes}}</td>
                 </tr>
+              </tbody>
             </table>
           </div>
         </div>
