--- a/modules/core/client/views/admin/index.client.view.html
+++ b/modules/core/client/views/admin/index.client.view.html
@@ -1,5 +1,4 @@
 <section ng-controller="HomeController">
   <a ui-sref="events.index()" class="btn btn-default">Manage Events</a> <br />
-  <a ui-sref="eventCategories.index()" class="btn btn-default">Manage Event Categories</a><br />
-  <a ui-sref="projects.votes()">Vote Results</a>
+  <a ui-sref="eventCategories.index()" class="btn btn-default">Manage Event Categories</a>
 </section>
