--- a/modules/projects/client/views/list-projects-votes.client.view.html
+++ b/modules/projects/client/views/list-projects-votes.client.view.html
@@ -11,7 +11,7 @@
 <body>
 
 <section ng-controller="ProjectsController" ng-init="find()">
-  <div class="container">
+  <div class="col-xs-12">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#all">All Projects</a></li>
       <li><a data-toggle="tab" href="#category1">Category 1</a></li>
