--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,10 +1,8 @@
 <div ng-controller="HeaderController">
     <nav style="width:200px" id="side-menu">
         <a href="#" ng-click="closeMenu()">Close &times;</a>
-        <a ui-sref="global()">Home</a>
-        <a ui-sref="projects.list()">Projects</a>
-        <a ui-sref="ideas.list()">Ideas</a>
-        <a class="signin" ui-sref="login()">Sign In</a>
+        <a ui-sref="{{menuItem['ui-sref']}}" ng-repeat="menuItem in activeMenu">{{menuItem.title}}</a>
+        <a ng-click="logout()" ng-if="loggedIn" style="cursor: pointer">Logout</a>
     </nav>
 
     <div id="top-menu" ng-click="toggleCollapsibleMenu()">
