fixing votes merge

--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -99,3 +99,12 @@ ul.team-list li {
 .project-item {
   cursor: pointer;
 }
+
+/* projects-vote */
+thead {
+  background-color: #509E2F;
+}
+
+tbody {
+  background-color: white;
+}
