Fixed ideas code for combatibility with master

--- a/modules/ideas/client/views/success.client.view.html
+++ b/modules/ideas/client/views/success.client.view.html
@@ -1,9 +1,9 @@
 
-<section ng-controller="IdeasController">
+<section class = "ideaspage" ng-controller="IdeasController">
   <div class="col-xs-12">
-    <h2 class="backscreen">Idea Submitted!</h2>
+    <h2 class="backscreen">Ideas updated Successfully!</h2>
 
-        <a ui-sref="global()" color="PMS 362c" class="btn btn-primary" >Home</a>
+        <a ui-sref="home()" color="#509e2f" class="btn btn-primary" >Home</a>
 
   </div>
 </section>
