--- a/modules/ideas/client/views/create-idea.client.view.html
+++ b/modules/ideas/client/views/create-idea.client.view.html
@@ -14,10 +14,10 @@
 
   <div class="row">
         <div class="col-xs-6">
-        <button ui-sref="global()" class="btn btn-primary-1 pull-left">
+        <button ui-sref="home()" class="btn btn-primary-1 pull-left">
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
-        <button type="submit" ng-click="saveIdeaInfo()" class="btn btn-primary">
+        <button type="submit" ng-click="create()" class="btn btn-primary">
           Submit
         </button>
       </div>
