--- a/modules/ideas/client/views/list-ideas.client.view.html
+++ b/modules/ideas/client/views/list-ideas.client.view.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section class="ideaspage" ng-controller="IdeasController" ng-init="find()">
-    <div class="list-group" ui-sref="ideas.view({ideaId: idea._id})" ng-repeat="idea in ideas|orderBy:random">
+    <div class="list-group" ui-sref="ideas.view({ideaId: idea._id})" ng-repeat="idea in ideas|orderBy:'-title'">
       <a class="list-group-item">
         <h4 class="list-group-item-heading">{{idea.title}}</h4>
         <h6 class="list.group-item-heading">{{idea.category}}</h6>
