--- a/modules/ideas/client/views/view-idea.client.view.html
+++ b/modules/ideas/client/views/view-idea.client.view.html
@@ -15,7 +15,7 @@
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
 
-        <button ui-sref = "global()" class="btn btn-primary-1">
+        <button ui-sref = "home()" class="btn btn-primary-1">
         <span class="glyphicon glyphicon-home"></span>
         </button>
 
