unvote & vote function for now, fixed update function

--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -19,9 +19,9 @@
 
     <div class="project-content" ng-bind="project.description.long"></div>
     <div>
-      <button type="button" ng-click="vote(project, user);"
-              class="btn btn-md btn-block" ng-class="(voting.hasVoted) ? 'unvoteButton' : 'voteButton'">
-        <span>{{ voting.hasVoted ? 'Thanks for Voting!' : 'Vote!' }}</span>
+      <button type="button" ng-click="hasVoted ? unvote(project) : vote(project)"
+              class="btn btn-md btn-block" ng-class="hasVoted ? 'unvoteButton' : 'voteButton'">
+        <span>{{hasVoted ? 'Thanks for Voting!' : 'Vote!'}}</span>
       </button>
     </div>
   </section>
