added styling to auth page to match other pages

--- a/modules/ideas/client/views/list-ideas.client.view.html
+++ b/modules/ideas/client/views/list-ideas.client.view.html
@@ -20,11 +20,11 @@
             </a>
           </div>
               <div class="col-xs-1">
-              <button class = "btn1">
-                  <span class = "base-class glyphicon" ng-class="isLiked() ? 'glyphicon-heart' : 'glyphicon-heart-empty'">
+              <button ng-click = "liked=!liked" ng-model = "liked" class = "btn1">
+                  <span class = "base-class glyphicon" ng-class="liked ? 'glyphicon-heart' : 'glyphicon-heart-empty'">
                  </span>
               </button>
-              <button class = "btn1" ng-click="like()" ng-model="findOne()">Like This</button>
+
             </div>
 
 
