--- a/modules/users/client/views/signin.client.view.html
+++ b/modules/users/client/views/signin.client.view.html
@@ -14,9 +14,16 @@
       <input class="option" type="checkbox" ng-model="showpassword" ng-checked="false"> Show Password </input>
     </div>
 
-    <div class="form-group">
-      <input type="submit" value="Create" class="btn btn-primary">
-    </div>
+
+        <div class="form-group">
+          <input type="submit" value="Create" class="btn btn-primary">
+        </div>
+        <button ui-sref = "welcomescreen()" class="btn btn-primary">
+        <span class="glyphicon glyphicon-home"></span>
+        </button>
+
+
+
   </form>
 </div>
 </div>
