Shuffle array before passing into scope.

--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<section ng-controller="ProjectsController" ng-init="find(); sortType = randomSort;">
+<section ng-controller="ProjectsController" ng-init="find();">
   <div class="row">
     <div class="pull-right">
     <a class="btn btn-primary" ng-click="sortType = 'votes'; showVotes = true; sortReverse = !sortReverse">
