changing ask a question in list view

--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="FAQsController" ng-init="findOne()">
+<section ng-controller="FAQsController" ng-init="">
   <div class="col-xs-12">
     <h2>Respond to FAQ</small></h2>
     <h1 ng-bind="faq.question"></h1>
