--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -8,15 +8,23 @@
 <div class="col-xs-12">
 <section data-ng-controller="FAQsController" ng-init="find()">
   <div class="page-header">
+    <div class="col-lg-6">
     <h1>Frequently Asked Questions</h1>
-    <div class="btn-group">
-      <button type="btn" class="btn btn-xs pull-right"  ui-sref="faqs.post()"><i class="glyphicon glyphicon-plus"><div class="glyphicon glyphicon-question-sign"></div></i> Ask a question</button>
+    <button data-toggle="collapse" class="btn btn-group-lg" ng-click="askme=!askme">Ask a question</button>
+    <div ng-show="askme">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Ask a question...">
+        <span class="input-group-btn">
+        <button class="btn btn-secondary" type="button">?</button>
+      </span>
+      </div>
+    </div>
     </div>
   </div>
   <div class="list-group" ng-repeat="faq in faqs">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading" ng-click="showme=!showme"> {{faq.question}} <button class="btn btn-link glyphicon glyphicon-question-sign"></button></h4>
-      <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <button class="btn btn-secondary glyphicon glyphicon-exclamation-sign" ui-sref="faqs.respond({faqId: faq._id}})"></button></h6>
+      <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <button class="btn btn-secondary glyphicon glyphicon-exclamation-sign" ui-sref="faqs.respond({faqId: faq._id})"></button></h6>
       <h8 class="list-group-item-text" ng-show="showme"> {{faq.solved}} <div class="glyphicon glyphicon-warning-sign"></div></h8>
     </a>
   </div>
