First time screen, hopefully final

--- a/modules/ideas/client/css/ideas.css
+++ b/modules/ideas/client/css/ideas.css
@@ -8,6 +8,12 @@
   font-family: "Times New Roman", Times, serif;
   letter-spacing:1px;
 }
+
+.welcome-screen {
+  margin-top:6vh;
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: 1px;
+}
 .ideaspage h2 {
   font-weight: 500;
   margin-bottom: 3vh;
