change welcome screens to log in page

--- a/modules/users/client/views/welcomescreens/welcome2.client.view.html
+++ b/modules/users/client/views/welcomescreens/welcome2.client.view.html
@@ -28,7 +28,7 @@
             <div style="margin-top:50px">
               <a ui-sref="user.welcome1()" class="btn btn-primary outline"> Back </a>
               &nbsp;
-              <a ui-sref="home()" class="btn btn-primary outline">
+              <a ui-sref="signin()" class="btn btn-primary outline">
               <span class="glyphicon glyphicon-home"></span> </a>
             </div>
           </div>
