--- a/modules/users/client/views/signin.client.view.html
+++ b/modules/users/client/views/signin.client.view.html
@@ -16,6 +16,11 @@
             <input type="submit" value="Login" class="btn btn-primary">
           </div>
     </form>
+    <div class="welcome-screen">
+    <a ui-sref = "user.splash()">
+    First time using the app?  Click Here!
+    </a>
+    </div>
   </div>
 
 
