--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -12,12 +12,12 @@
     <h1>Frequently Asked Questions</h1>
     <button data-toggle="collapse" class="btn btn-group-lg" ng-click="askme=!askme">Ask a question</button>
     <div ng-show="askme">
-      <form name="faqForm" class="form-vertical" ng-submit="respond(faqForm.$valid)">
+      <form name="faqForm" class="form-vertical">
         <fieldset>
           <div class="form-group" show-errors>
             <input type="text" name="question" class="form-control" ng-model="question" placeholder="Ask a question" required>
-            <div ng-messages="faqForm.solution.$error" role="alert">
-              <p class="help-block error-text" ng-message="required">FAQ solution is required</p>
+            <div ng-messages="faqForm.question.$error" role="alert">
+              <p class="help-block error-text" ng-message="required">Question is required</p>
             </div>
           </div>
           <input type="submit" color="PMS 362c" class="btn btn-success btn-lg btn-block" ng-click="post()" placeholder="Ask" />
@@ -26,10 +26,11 @@
     </div>
     </div>
   </div>
-  <div class="list-group" id="faqs-list" ui-sref="faqs.respond({faqId: faq._id})" ng-repeat="faq in faqs">
+  <div class="list-group" id="faqs-list" ng-repeat="faq in faqs">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading" ng-click="showme=!showme"> {{faq.question}} <button class="btn btn-link glyphicon glyphicon-question-sign"></button></h4>
-      <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <button class="btn btn-secondary glyphicon glyphicon-exclamation-sign" ui-sref="faqs.respond({faqId: faq._id})"></button></h6>
+      <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <a ui-sref="faqs.respond({faqId: faq._id})"><button class="btn btn-secondary glyphicon glyphicon-exclamation-sign"></button></a></h6>
+
       <h8 class="list-group-item-text" ng-show="showme"> {{faq.solved}} <div class="glyphicon glyphicon-warning-sign"></div></h8>
     </a>
   </div>
