--- a/modules/faqs/client/views/respond-faq.client.view.html
+++ b/modules/faqs/client/views/respond-faq.client.view.html
@@ -16,6 +16,9 @@
           </div>
         </div>
         <input type="submit" color="PMS 362c" class="btn btn-success btn-lg btn-block" value="Respond" />
+        <a class="btn btn-primary" ng-click="remove()">
+          <i class="glyphicon glyphicon-trash"></i>
+        </a>
       </fieldset>
     </form>
   </div>
