--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,7 +3,7 @@
         <a href="#" ng-click="closeMenu()">Close &times;</a>
         <a ui-sref="global()">Home</a>
         <a ui-sref="projects.list()">Projects</a>
-        <a ui-sref="questions.list()">FAQs</a>
+        <a ui-sref="faqs.list()">FAQs</a>
         <a ui-sref="ideas.list()">Ideas</a>
         <a class="signin" ui-sref="login()">Sign In</a>
 
