--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="col-lg-12">
-<section data-ng-controller="FAQsController" ng-init="find()">
+<section data-ng-controller="FAQsController as faqsCtrl">
   <div class="page-header">
     <div class="col-lg-12">
     <h1>Frequently Asked Questions</h1>
@@ -26,7 +26,7 @@
     </div>
     </div>
   </div>
-  <div class="list-group" id="faqs-list" ng-repeat="faq in faqs">
+  <div class="list-group" id="faqs-list" ng-repeat="faq in faqsCtrl.faqs">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading" ng-click="showme=!showme"> {{faq.question}} <button class="btn btn-link glyphicon glyphicon-question-sign"></button></h4>
       <h6 class="list-group-item-heading" ng-show="showme"> {{faq.solution}} <a ui-sref="faqs.respond({faqId: faq._id})"><button class="btn btn-secondary glyphicon glyphicon-exclamation-sign"></button></a></h6>
