--- a/modules/events/client/views/list.client.view.html
+++ b/modules/events/client/views/list.client.view.html
@@ -13,6 +13,6 @@
     <div>Start: {{event.start | date: 'MM/dd/yyyy @ h:mm a Z'}}</div>
     <div>End: {{event.end | date: 'MM/dd/yyyy @ h:mm a Z'}}</div>
 
-    <a class="btn btn-info btn-sm" ui-sref="events.edit({eventId: event._id})">Edit</a>
+    <a class="btn btn-info btn-sm" ui-sref="events.manage({eventId: event._id})">Manage</a>
   </div>
 </section>
