--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -8,8 +8,6 @@
   <section ng-controller="ProjectsController" ng-init="findOne()" >
     <div class="row">
       <div class="col-xs-12">
-        <h1 ng-bind="project.title"></h1>
-        <p><small>Category:</small> <strong ng-bind="project.category"></strong></p>
         <div class="pull-right">
           <a class="btn btn-primary" ui-sref="projects.edit({projectId: project._id})">
             <i class="glyphicon glyphicon-edit"></i>
@@ -17,6 +15,11 @@
           <a class="btn btn-primary" ng-click="remove()">
             <i class="glyphicon glyphicon-trash"></i>
           </a>
+        </div>
+        <h1 ng-bind="project.title"></h1>
+        <p><small>Category:</small> <strong ng-bind="project.category"></strong></p>
+        <div ng-show="project.youtube != null">
+          <iframe width="100%" height="300" src="{{project.youtube}}" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="project-content" ng-bind="project.description.long"></div>
