--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -111,3 +111,10 @@ thead {
 tbody {
   background-color: white;
 }
+
+.comment {
+  border: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 10px;
+  background-color: #eee;
+}
