--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -7,7 +7,8 @@
 
     </nav>
 
-    <div id="top-menu" ng-click="toggleCollapsibleMenu()">
-        <span>&#9776;</span>
+    <div id="top-menu" ng-click="toggleCollapsibleMenu()" style="text-align:center;">
+      <span style="float:left">&#9776;</span>
+      <img src="/modules/core/client/img/Ultimate_Logo.png" style="height:80%;margin:2px;"/>
     </div>
 </div>
