--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -8,7 +8,8 @@
     </nav>
 
     <div id="top-menu" ng-click="toggleCollapsibleMenu()" style="text-align:center;">
-      <span style="float:left">&#9776;</span>
       <img src="/modules/core/client/img/Ultimate_Logo.png" style="height:80%;margin:2px;"/>
+      <span style="float:left">&#9776;</span>
     </div>
+    <div style="text-align:center;background-color:#63666A;color:white;height:40px;line-height:40px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;48 Hours Hackathon</div>
 </div>
