moved styling to css

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -7,9 +7,9 @@
 
     </nav>
 
-    <div id="top-menu" ng-click="toggleCollapsibleMenu()" style="text-align:center;">
-      <img src="/modules/core/client/img/Ultimate_Logo.png" style="height:80%;margin:2px;"/>
+    <div id="top-menu" ng-click="toggleCollapsibleMenu()">
+      <img id="homelogo" src="/modules/core/client/img/Ultimate_Logo.png"/>
       <span style="float:left">&#9776;</span>
     </div>
-    <div style="text-align:center;background-color:#63666A;color:white;height:40px;line-height:40px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;48 Hours Hackathon</div>
+    <div id="subheader">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;48 Hours Hackathon</div>
 </div>
