--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -40,14 +40,28 @@ a:hover .header-profile-image {
   display: inline;
 }
 
+#homelogo {
+  height:80%;
+  margin:2px;
+}
+
 #top-menu {
   background-color: #509E2F;
   color: white;
+  text-align:center;
   cursor: pointer;
   height: 50px;
   line-height: 50px;
   padding: 0 10px;
   font-size: 24px;
+}
+
+#subheader {
+  text-align:center;
+  background-color:#63666A;
+  color:white;
+  height:40px;
+  line-height:40px;
 }
 
 #side-menu {
