--- a/modules/ideas/client/views/create-idea.client.view.html
+++ b/modules/ideas/client/views/create-idea.client.view.html
@@ -17,6 +17,8 @@
         <button ui-sref="home()" class="btn btn-primary-1 pull-left">
         <span class="glyphicon glyphicon-arrow-left"></span>
         </button>
+      </div>
+        <div class="col-xs-6">
         <button type="submit" ng-click="create()" class="btn btn-primary">
           Submit
         </button>
